# LyricFlow

./: .gitignore  01_PRD.md  ADVANCED_OPTIMIZATION_GUIDE.md  CHECKLIST.md  CLAUDE.md  ENHANCEMENT_PLAN.md  LICENSE  QUICKSTART.md  README.md  README_KO.md  SPEC.md  build.py  lyricflow.py  progress.md  pyproject.toml  requirements.txt  sync_suisei.py
docs/: lyrics_sync_tech_guide_2025.md
