[project]
name = "lyricflow"
version = "2.1.0"
description = "AI-Powered Lyrics Synchronization Tool with Line Preservation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "LyricFlow Contributors" }
]
keywords = ["lyrics", "subtitle", "lrc", "whisper", "synchronization", "karaoke", "japanese"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Text Processing",
]

dependencies = [
    "torch>=2.0.0",
    "stable-ts>=2.15.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]
demucs = [
    "demucs>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/LyricFlow"
Repository = "https://github.com/YOUR_USERNAME/LyricFlow"
"Bug Tracker" = "https://github.com/YOUR_USERNAME/LyricFlow/issues"

[project.scripts]
lyricflow = "lyricflow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0.0",
]

# uv specific configuration
[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
